# KinKal

./: .ci-setup.sh  .clang-tidy  .gitignore  .travis-before-install.sh  .travis-script.sh  .travis.yml  CMakeLists.txt  FindKinKal.cmake  KTLine.cc  KTLine.hh  OldScons  README.md  SConstruct  setup.sh
Detector/: BFieldMap.cc  BFieldMap.hh  BFieldUtils.hh  CMakeLists.txt  CylindricalShell.hh  DetectorHit.hh  DetectorXing.hh  ElementXing.hh  Hit.hh  MaterialXing.hh  ParameterHit.hh  Residual.cc  Residual.hh  ResidualHit.hh  SConscript  ScintHit.hh  ShellXing.hh  SimpleCell.hh  StrawHit.hh  StrawMat.cc  StrawMat.hh  StrawMaterial.cc  StrawMaterial.hh  StrawXing.hh  StrawXingConfig.hh  WireCell.hh  WireHit.hh  WireHitStructs.hh
Examples/: BFieldInfo.hh  CMakeLists.txt  CaloDistanceToTime.cc  CaloDistanceToTime.hh  DOCAWireHitUpdater.hh  DomainWallInfo.hh  HitInfo.hh  LinkDef.h  MaterialInfo.hh  ParticleTrajectoryInfo.hh  ScintHit.hh  ShellXing.hh  SimpleScintHit.hh  SimpleWireHit.hh  StrawMaterial.cc  StrawMaterial.hh  StrawXing.hh  StrawXingConfig.hh  WireHitStructs.hh
Fit/: BField.hh  BFieldEffect.hh  CMakeLists.txt  Chisq.cc  Config.cc  Config.hh  Constraint.hh  Domain.hh  DomainWall.hh  Effect.hh  ExtraConfig.hh  FitData.hh  FitState.hh  FitStatus.cc  HitConstraint.hh  Material.hh  Measurement.hh  MetaIterConfig.cc  MetaIterConfig.hh  ParameterConstraint.hh  README.md  Status.cc  Status.hh  Track.hh  TrackEnd.hh
General/: AxialBFieldMap.cc  AxialBFieldMap.hh  BFieldMap.cc  BFieldMap.hh  CMakeLists.txt  Chisq.cc  Chisq.hh  CloneContext.cc  CloneContext.hh  CylBFieldMap.cc  CylBFieldMap.hh  CylBMap.cc  CylBMap.hh  FitData.hh  InterpBilinear.cc  InterpBilinear.hh  LRAmbig.cc  LinkDef.h  MomBasis.cc  MomBasis.hh  Parameters.cc  Parameters.hh  ParticleState.cc  ParticleState.hh  ParticleStateEstimate.cc  ParticleStateEstimate.hh  PhysicalConstants.h  PrintDetail.hh  SystemOfUnits.h  TimeDir.cc  TimeDir.hh  TimeRange.cc  TimeRange.hh  Vectors.hh  Weights.cc  Weights.hh
Geometry/: Annulus.cc  Annulus.hh  CMakeLists.txt  Cylinder.cc  Cylinder.hh  Disk.cc  Disk.hh  Frustrum.cc  Frustrum.hh  InterData.hh  Intersect.hh  IntersectFlag.cc  IntersectFlag.hh  Intersection.cc  Intersection.hh  LineSegment.cc  LineSegment.hh  ParticleTrajectoryIntersect.hh  Plane.cc  Plane.hh  Ray.cc  Ray.hh  Rectangle.cc  Rectangle.hh  Solid.hh  Surface.hh  ThinSolid.cc  ThinSolid.hh
KinKal/: BField.cc  BField.hh  BFieldDomains.hh  BFieldEffect.hh  BFieldMap.cc  BFieldMap.hh  BFieldUtils.hh  CMakeLists.txt  CentralHelix.cc  CentralHelix.hh  ClosestApproach.hh  ClosestApproachData.cc  ClosestApproachData.hh  Config.cc  Config.hh  Constraint.hh  Context.hh  D2T.hh  DMat.hh  DPiece.hh  DStraw.hh  DXing.hh  Data.hh  DetectorHit.hh  DetectorXing.hh  DistanceToTime.hh  Effect.hh  FitData.hh  FitHelix.C  FitState.hh  FitStatus.cc  FitStatus.hh  HHelix.cc  HHelix.hh  Hit.hh  IPHelix.cc  IPHelix.hh  KInter.hh  KKBFCorr.hh  KKBField.hh  (+104 more)
MatEnv/: BbrCollectionUtils.hh  CMakeLists.txt  DetLgtMaterial.cc  DetLgtMaterial.hh  DetMaterial.cc  DetMaterial.hh  DetMtrProp.hh  ELossDistributions.cc  ELossDistributions.hh  ElmPropObj.cc  ElmPropObj.hh  ErrLog.hh  FileFinderInterface.hh  MatDBInfo.cc  MatDBInfo.hh  MatElementList.cc  MatElementList.hh  MatElementObj.cc  MatElementObj.hh  MatElmDictionary.cc  MatElmDictionary.hh  MatIsoDictionary.cc  MatIsoDictionary.hh  MatIsotopeList.cc  MatIsotopeList.hh  MatIsotopeObj.cc  MatIsotopeObj.hh  MatMaterialList.cc  MatMaterialList.hh  MatMaterialObj.cc  MatMaterialObj.hh  MatMtrDictionary.cc  MatMtrDictionary.hh  MaterialInfo.hh  MaterialsList.data  MoyalDist.cc  MoyalDist.hh  MtrPropObj.cc  MtrPropObj.hh  PtrLess.hh  (+7 more)
Tests/: BFieldInfo.hh  BFieldMapTest.hh  CMakeLists.txt  CaloDistanceToTime_unit.cc  CentralHelixBField_unit.cc  CentralHelixClosestApproach_unit.cc  CentralHelixDerivs_unit.cc  CentralHelixFit_unit.cc  CentralHelixHit_unit.cc  CentralHelixPKTraj_unit.cc  CentralHelixTPoca_unit.cc  CentralHelix_unit.cc  ClosestApproachTest.hh  ConstantDistanceToTime_unit.cc  DebugSchedule.txt  Derivatives.hh  ELossDists_unit.cc  FitTest.hh  Geometry_unit.cc  HitInfo.hh  HitTest.hh  Intersection_unit.cc  KTrajDerivs_test.hh  KTraj_test.hh  KinematicLineBField_unit.cc  KinematicLineClosestApproach_unit.cc  KinematicLineDerivs_unit.cc  KinematicLineFit_unit.cc  KinematicLineHit_unit.cc  KinematicLinePKTraj_unit.cc  KinematicLineTPoca_unit.cc  KinematicLine_unit.cc  LinkDef.h  LoopHelixBField_unit.cc  LoopHelixClosestApproach_unit.cc  LoopHelixDerivs_unit.cc  LoopHelixFit_unit.cc  LoopHelixHit_unit.cc  LoopHelixPKTraj_unit.cc  LoopHelixTPoca_unit.cc  (+25 more)
Trajectory/: CMakeLists.txt  CaloDistanceToTime.cc  CaloDistanceToTime.hh  CentralHelix.cc  CentralHelix.hh  ClosestApproach.hh  ClosestApproachData.cc  ClosestApproachData.hh  ConstantDistanceToTime.cc  ConstantDistanceToTime.hh  DistanceToTime.hh  GeometricLine.cc  GeometricLine.hh  KinematicLine.cc  KinematicLine.hh  Line.cc  Line.hh  LinkDef.h  LoopHelix.cc  LoopHelix.hh  POCAUtil.cc  POCAUtil.hh  ParticleTrajectory.cc  ParticleTrajectory.hh  PieceClosestApproach.hh  PieceTrajectory.hh  PiecewiseClosestApproach.hh  PiecewiseTrajectory.hh  PointClosestApproach.hh  PointPiecewiseClosestApproach.hh  Residual.hh  SensorLine.cc  SensorLine.hh  TrajUtils.hh
UnitTests/: .LHelix_unit.cc.swp  .SConscript.swp  BFieldMapTest.hh  BFieldTest.hh  BField_unit.cc  CMakeLists.txt  CentralHelixBFieldTest_unit.cc  CentralHelixDerivs_unit.cc  CentralHelixFitTest_unit.cc  CentralHelixHitTest_unit.cc  CentralHelixPKTrajTest_unit.cc  CentralHelixTPocaTest_unit.cc  CentralHelix_unit.cc  ClosestApproachTest.hh  DebugSchedule.txt  Dict.cc  Dict_rdict.pcm  FitTest.hh  FitTest_unit.cc  HHelixDerivs_unit.cc  HHelix_unit.cc  HitInfo.hh  HitTest.hh  HitTest_unit.cc  IPHelixBFieldTest_unit.cc  IPHelixDerivs_unit.cc  IPHelixFitTest_unit.cc  IPHelixHitTest_unit.cc  IPHelixPKTrajTest_unit.cc  IPHelixTPocaTest_unit.cc  IPHelix_unit.cc  KKBFieldInfo.hh  KKHitInfo.hh  KKMatInfo.hh  KTLineBFieldTest_unit.cc  KTLineFitTest_unit.cc  KTLineHitTest_unit.cc  KTLine_unit.cc  (+48 more)
(+57 files in other folders)
